<?xml version="1.0" encoding="utf-8"?>

<!-- CENG-322-0NA: Group 6
     Denis Shwaloff - N01424883
     Alvaro Rodrigo Chavez Moya - N01455107
     Paolo Adrian Quezon - N01424883
     Nicholas Dibiase - N01367109           -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/SmartAquaHomeBtn"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:tooltipText="@string/home"
        app:showAsAction="withText|always" />
    <item
        android:id="@+id/SmartAquaSetM"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/SmartAquaFeedbackM"
        android:title="@string/feedback"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/SmartAquaAboutUsM"
        android:title="@string/about_us_t"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/SmartAquaContactUsM"
        android:title="@string/contactUs"
        app:showAsAction="ifRoom" />
</menu>