<?xml version="1.0" encoding="utf-8"?>

<!-- CENG-322-0NA: Group 6
     Denis Shwaloff - N01424883
     Alvaro Rodrigo Chavez Moya - N01455107
     Paolo Adrian Quezon - N01424883
     Nicholas Dibiase - N01367109           -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/SmartAquaG1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/SmartAquaWaterMenu"
            android:icon="@drawable/water_menu_icon"
            android:title="@string/water_monitor" />

        <item
            android:id="@+id/SmartAquaTemperatureMenu"
            android:icon="@drawable/temperature_water_icon"
            android:title="@string/temperature_monitor" />

        <item
            android:id="@+id/SmartAquaLightMenu"
            android:icon="@drawable/light_menu_icon"
            android:title="@string/light_monitor" />

        <item
            android:id="@+id/SmartAquaSwitchMenu"
            android:icon="@drawable/switch_menu_icon"
            android:title="@string/switch_control" />
    </group>

    <group
        android:id="@+id/SmartAquaG2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/SmartAquaSettingsMenu"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/SmartAquaFeedbackMenu"
            android:icon="@drawable/feedback_icon"
            android:title="@string/feedback" />
    </group>

</menu>