<?xml version="1.0" encoding="utf-8"?>

<!-- CENG-322-0NA: Group 6
     Denis Shwaloff - N01424883
     Alvaro Rodrigo Chavez Moya - N01455107
     Paolo Adrian Quezon - N01424883
     Nicholas Dibiase - N01367109           -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SmartAquaFeedback">

        <ImageView
            android:id="@+id/SmartAquaFTitle"
            android:layout_width="@dimen/title_pic_width"
            android:layout_height="@dimen/title_pic_height"
            android:contentDescription="@string/reviewTitleImgDesc"
            android:src="@drawable/feedback_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/SmartAquaFText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/feedback_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/insert_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/SmartAquaETName"
            app:layout_constraintTop_toBottomOf="@+id/SmartAquaFText" />

        <EditText
            android:id="@+id/SmartAquaETName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="name"
            android:background="@drawable/smart_aqua_et_border"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/insert_email"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/SmartAquaETEmail"
            app:layout_constraintTop_toBottomOf="@+id/SmartAquaETName" />

        <EditText
            android:id="@+id/SmartAquaETEmail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/smart_aqua_et_border"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />


        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/insert_phone"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/SmartAquaETPhone"
            app:layout_constraintTop_toBottomOf="@+id/SmartAquaETEmail" />

        <EditText
            android:id="@+id/SmartAquaETPhone"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="phone"
            android:background="@drawable/smart_aqua_et_border"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/insert_comments"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/SmartAquaETComment"
            app:layout_constraintTop_toBottomOf="@+id/SmartAquaETPhone" />

        <EditText
            android:id="@+id/SmartAquaETComment"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/smart_aqua_et_border"
            android:hint="@string/hint_comment"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/SmartAquaRatingBarTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hint_rate"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/SmartAquaETComment"
            app:layout_constraintTop_toBottomOf="@+id/SmartAquaETComment" />

        <RatingBar
            android:id="@+id/SmartAquaRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/hint_rate"
            android:theme="@style/RatingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SmartAquaRatingBarTV" />

        <Button
            android:id="@+id/SmartAquaFeedbackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SmartAquaRatingBar" />

        <ProgressBar
            android:id="@+id/SmartAquaFeedbackProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SmartAquaFeedbackBtn" />

        <ImageView
            android:id="@+id/SmartAquaFeedbackPic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/reviewFeedbackImgDesc"
            android:src="@drawable/feedback_pic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SmartAquaFeedbackProgressBar"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>