<?xml version="1.0" encoding="utf-8"?>

<!-- CENG-322-0NA: Group 6
     Denis Shwaloff - N01424883
     Alvaro Rodrigo Chavez Moya - N01455107
     Paolo Adrian Quezon - N01424883
     Nicholas Dibiase - N01367109           -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SmartAquaSettings">

    <ImageView
        android:id="@+id/SmartAquaSettingsTitle"
        android:layout_width="260dp"
        android:layout_height="134dp"
        android:src="@drawable/settings_title" />

    <TextView
        android:id="@+id/SmartAquaPortraitLock"
        android:layout_width="220dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="175dp"
        android:layout_marginStart="30dp"

        android:text="@string/settingsLockPortrait"
        android:textColor="@color/turquoise"
        android:textStyle="bold"
        />

    <ToggleButton
        android:id="@+id/SmartAquaPortraitLockToggleBtn"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:background="@color/turquoise"

        android:layout_marginTop="170dp"
        android:layout_marginStart="275dp"

        android:text="@string/settingsTogglePortraitBtn"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/SmartAquaResetValues"
        android:layout_width="220dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"

        android:text="@string/settingsResetValues"
        android:textColor="@color/turquoise"
        android:textStyle="bold" />

    <Button
        android:id="@+id/SmartAquaResetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/turquoise"

        android:text="@string/settingsResetBtn"
        android:textColor="@color/white"
        android:textSize="15sp" />

</FrameLayout>