<?xml version="1.0" encoding="utf-8"?>

<!-- CENG-322-0NA: Group 6
     Denis Shwaloff - N01424883
     Alvaro Rodrigo Chavez Moya - N01455107
     Paolo Adrian Quezon - N01424883
     Nicholas Dibiase - N01367109           -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmartAquaTemperature">

    <ImageView
        android:id="@+id/SmartAquaTempTitle"
        android:layout_width="@dimen/title_pic_width"
        android:layout_height="@dimen/title_pic_height"
        android:src="@drawable/temperature_control_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SmartAquaTempControlDescription"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="600dp"
        android:gravity="center"
        android:text="@string/tempControlDescription"
        android:textColor="@color/paynes_gray"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/SmartAquaTempToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="160dp"
        android:layout_marginTop="552dp"
        android:checked="false"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textOff="@string/tempToggleON"
        android:textOn="@string/tempToggleOFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showText="true" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/yinmin_blue"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/SmartAquaTempIcon"
            android:layout_width="240dp"
            android:layout_height="220dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@drawable/temperature_stat_icon"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="189dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/SmartAquaTempReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="103dp"
        android:layout_marginTop="173dp"
        android:text="@string/tempReadings"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="207dp"
        android:alpha="0.8"
        android:background="@color/lapis_lazuli"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/SmartAquaTempSeekBar"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="532dp"
        android:max="100"
        android:progress="50"
        android:progressTint="@color/russian_violet"
        android:thumbTint="@color/russian_violet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SmartAquaTempReading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="176dp"
        android:layout_marginTop="504dp"
        android:text="@string/tempReadings2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SmartAquaTempReading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:layout_marginTop="504dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>